# phishtank-rs

./: .gitignore  Cargo.toml  README.md
examples/: get_database.rs  lookup.rs
src/: de.rs  error.rs  lib.rs  utils.rs
src/check/: mod.rs
src/download/: mod.rs
