[package]
name="phishtank"
version = "0.1.0"
description = "Phishtank API"
authors = ["Marirs <marirs@gmail.com>"]
repository = "https://github.com/marirs/phishtank-rs"
keywords = ["phishtank", "api", "security"]
categories = ["api-bindings"]
readme = "README.md"
license-file = "LICENSE"
exclude = ["examples"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
bzip2 = "0.4.3"
reqwest = { version = "0.11.3", features = ["blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"

[lib]
name = "phishtank"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "marirs/phishtank-rs" }

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true